losing overflow scroll for some reason made my header bug out with its margin, so i needed to add a bunch of break lines for now

--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@ button {
   margin: 0;
   min-width: 100%;
   height: 500vh;
+  padding-top: 250px;
   /* overflow: scroll; */
 }
 
@@ -188,7 +189,7 @@ button {
 }
 .coverSghpic {
   position: fixed;
-  margin-top: 75px;
+  margin-top: 55px;
   width: 60px;
   height: 60px;
 }
@@ -221,7 +222,7 @@ button {
 }
 .coverZozopic {
   position: fixed;
-  margin-top: 65px;
+  margin-top: 43px;
   margin-left: 273px;
   max-width: 45px;
   max-height: 45px;
@@ -307,7 +308,7 @@ button {
 }
 .act1Zozopic-1 {
   position: fixed;
-  margin-top: 80%;
+  margin-top: 70%;
   margin-left: 30%;
   max-width: 105px;
   max-height: 105px;
@@ -355,7 +356,7 @@ button {
 }
 .act1BonorBoypic-1 {
   position: fixed;
-  margin-top: 80%;
+  margin-top: 75%;
   margin-left: 75%;
   max-width: 105px;
   max-height: 105px;
@@ -363,7 +364,7 @@ button {
 }
 .act1BonorBoypic-2 {
   position: fixed;
-  margin-top: 80%;
+  margin-top: 70%;
   margin-left: 65%;
   max-width: 105px;
   max-height: 105px;
@@ -371,7 +372,7 @@ button {
 }
 .act1BonorBoypic-3 {
   position: fixed;
-  margin-top: 85%;
+  margin-top: 75%;
   margin-left: 65%;
   max-width: 105px;
   max-height: 105px;
@@ -379,7 +380,7 @@ button {
 }
 .act1BonorBoypic-4 {
   position: fixed;
-  margin-top: 80%;
+  margin-top: 75%;
   margin-left: 65%;
   max-width: 105px;
   max-height: 105px;
@@ -387,7 +388,7 @@ button {
 }
 .act1BonorBoypic-5 {
   position: fixed;
-  margin-top: 80%;
+  margin-top: 75%;
   margin-left: 65%;
   max-width: 105px;
   max-height: 105px;
@@ -465,7 +466,7 @@ button {
 }
 .act1Chickenpic-2 {
   position: fixed;
-  margin-top: 5%;
+  margin-top: 0;
   margin-left: 30%;
   max-width: 105px;
   max-height: 105px;
@@ -482,7 +483,7 @@ button {
 }
 .act1Chickenpic-4 {
   position: fixed;
-  margin-top: 05%;
+  margin-top: 0;
   margin-left: 30%;
   max-width: 105px;
   max-height: 105px;
@@ -490,7 +491,7 @@ button {
 }
 .act1Chickenpic-5 {
   position: fixed;
-  margin-top: 05%;
+  margin-top: 0;
   margin-left: 30%;
   max-width: 105px;
   max-height: 105px;
